Criado alguns casos de teste e estrutura dos testes montada

--- a/build.gradle
+++ b/build.gradle
@@ -106,7 +106,7 @@ cordapp {
 task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
     nodeDefaults {
         projectCordapp {
-            deploy = true
+            deploy = false
         }
         cordapp project(':contracts')
         cordapp project(':workflows')
